Fixed minor layout collapse
ヘッダ画像にルートへのリンクを追加。
プログレスバーの表示を修正。
年月日フォームの配置を修正。
余白の修正

--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -194,8 +194,8 @@
 
 .birthday-select{
   .select-wrap{
-    width: 76px;
-    display: inline-block;
+    display: flex;
+    align-items: baseline;
   }
 }
 
@@ -217,6 +217,12 @@
     }
     select{
       width: 100%;
+      height: 48px;
+      padding: 10px 16px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      background: 0;
+      cursor: pointer;
     }
   }
   &-default{
@@ -235,11 +241,12 @@
 
 .year,.month,.day{
   display: inline-block;
-  margin-top: 8px;
   position: relative;
   z-index: 2;
   height: 48px;
+  width: 76px;
   padding: 0 16px;
+  margin: 0 2px;
   border-radius: 4px;
   border: 1px solid #ccc;
   background: 0;
@@ -461,7 +468,6 @@
   }
   li.active{
     font-weight: 600px;
-    color: #ea352d;
     .progress-bar__status{
       background: #ea352d;
       &::before{
@@ -472,6 +478,8 @@
       }
     }
     &-last{
+      color: #ea352d;
+      font-weight: bold;
       .progress-bar__status::after{
         background: #ccc;
       }
